dhall/tests/type-inference/failure/unit/MergeMissingHandler2.txt
Type error: error: MergeVariantMissingHandler
 --> <current file>:1:1
  |
1 | merge { x = 0 } <x | y>.x
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ MergeVariantMissingHandler
  |
